--- a/3303-Elevator/pom.xml
+++ b/3303-Elevator/pom.xml
@@ -14,4 +14,23 @@
 	     <maven.compiler.source>17</maven.compiler.source>
 	     <maven.compiler.target>17</maven.compiler.target>
 	</properties>
+	<build>
+	  <plugins>
+	    <plugin>
+	      <!-- Build an executable JAR -->
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-jar-plugin</artifactId>
+	      <version>3.1.0</version>
+	      <configuration>
+	        <archive>
+	          <manifest>
+	            <addClasspath>true</addClasspath>
+	            <classpathPrefix>lib/</classpathPrefix>
+	            <mainClass>main.Main</mainClass>
+	          </manifest>
+	        </archive>
+	      </configuration>
+	    </plugin>
+	  </plugins>
+	</build>
 </project>
