Pom.xml fix will

--- a/3303-Elevator/pom.xml
+++ b/3303-Elevator/pom.xml
@@ -25,12 +25,35 @@
 	        <archive>
 	          <manifest>
 	            <addClasspath>true</addClasspath>
-	            <classpathPrefix>lib/</classpathPrefix>
 	            <mainClass>main.Main</mainClass>
 	          </manifest>
 	        </archive>
 	      </configuration>
 	    </plugin>
+		
+  <!-- any other plugins -->
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+		  <archive>
+	          <manifest>
+	            <addClasspath>true</addClasspath>
+	            <mainClass>main.Main</mainClass>
+	          </manifest>
+	        </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
 	  </plugins>
 	</build>
 </project>
