--- a/3303-Elevator/pom.xml
+++ b/3303-Elevator/pom.xml
@@ -9,6 +9,12 @@
 	    <artifactId>protobuf-java</artifactId>
 	    <version>3.19.4</version>
 	  </dependency>
+	<!-- junit 5, unit test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.1</version>
+        </dependency>
 	</dependencies>
 	<properties>
 	     <maven.compiler.source>17</maven.compiler.source>
