--- a/3303-Elevator/pom.xml
+++ b/3303-Elevator/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>3303-Elevator</groupId>
   <artifactId>3303-Elevator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>iteration-3</version>
 	<dependencies>
 	  <dependency>
 	    <groupId>com.google.protobuf</groupId>
