--- a/3303-Elevator/pom.xml
+++ b/3303-Elevator/pom.xml
@@ -9,6 +9,18 @@
 	    <artifactId>protobuf-java</artifactId>
 	    <version>3.19.4</version>
 	  </dependency>
+	<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.17.2</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.17.2</version>
+  </dependency>
+
+
 	<!-- junit 5, unit test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
